--- a/workflows/snake.yaml
+++ b/workflows/snake.yaml
@@ -1,53 +1,36 @@
-<br clear="both">
+name: Generate snake animation
 
-<h1 align="center">Hello There, Soy Gio!</h1>
+on:
+  schedule: # execute every 12 hours
+    - cron: "0 */12 * * *"
 
-###
+  workflow_dispatch:
 
-<div align="left">
-  <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/docker/docker-original.svg" height="40" alt="docker logo"  />
-  <img width="12" />
-  <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/kubernetes/kubernetes-plain.svg" height="40" alt="kubernetes logo"  />
-  <img width="12" />
-  <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/terraform/terraform-original.svg" height="40" alt="terraform logo"  />
-</div>
+  push:
+    branches:
+      - main
 
-###
+jobs:
+  generate:
+    permissions:
+      contents: write
+    runs-on: ubuntu-latest
+    timeout-minutes: 5
 
-<h2 align="left">DevOps Junior</h2>
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      
+      - name: generate snake.svg
+        uses: Platane/snk/svg-only@v3
+        with:
+          github_user_name: ${{ github.repository_owner }}
+          outputs: dist/snake.svg?palette=github-dark
 
-###
-
-<h4 align="left">Mis objetivos incluyen continuar desarrollando mis habilidades en AWS y otras tecnologías de la nube, así como participar en proyectos desafiantes que me permitan aplicar y expandir mis conocimientos. A largo plazo, aspiro a convertirme en un experto en Platform Engineering, SRE y DevOps, liderando iniciativas tecnológicas que impulsen la transformación digital en diversas industrias.</h4>
-
-###
-
-<img src="https://raw.githubusercontent.com/jpiedramacas/jpiedramacas/output/snake.svg" alt="Snake animation" />
-
-###
-
-<h2 align="left">Habilidades y Competencias</h2>
-
-###
-
-<h4 align="left">AWS Cloud:<br>Como profesional, poseo una amplia experiencia en la implementación de estrategias y programas en la nube de AWS. Mi conocimiento profundo y práctico de las herramientas y servicios de AWS me permite diseñar y ejecutar soluciones escalables y eficientes en la nube.<br><br>Innovación Tecnológica:<br>Me caracterizo por mi compromiso con la adopción de tecnologías emergentes. Constantemente busco oportunidades para integrar nuevas herramientas y metodologías en mis proyectos, lo que me permite mantenerme a la vanguardia en un entorno tecnológico en constante evolución.</h4>
-
-###
-
-<div align="center">
-  <a href="https://www.linkedin.com/in/jpiedramacas/" target="_blank">
-    <img src="https://img.shields.io/static/v1?message=LinkedIn&logo=linkedin&label=&color=0077B5&logoColor=white&labelColor=&style=for-the-badge" height="40" alt="linkedin logo"  />
-  </a>
-</div>
-
-###
-
-<br clear="both">
-
-<div align="center">
-  <img src="https://github-readme-stats.vercel.app/api/top-langs?username=jpiedramacas&locale=es&hide_title=false&layout=compact&card_width=320&langs_count=5&theme=dracula&hide_border=false&order=2" height="150" alt="languages graph"  />
-  <img src="https://streak-stats.demolab.com?user=jpiedramacas&locale=en&mode=daily&theme=dracula&hide_border=false&border_radius=5&order=3" height="150" alt="streak graph"  />
-  <img src="https://github-readme-activity-graph.vercel.app/graph?username=jpiedramacas&radius=16&theme=react&area=true&order=5" height="300" alt="activity-graph graph"  />
-</div>
-
-###
+      - name: push snake.svg to the output branch
+        uses: crazy-max/ghaction-github-pages@v3.1.0
+        with:
+          target_branch: output
+          build_dir: dist
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
