--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,34 +1,82 @@
-name: Generate snake animation
+name: Generate and Deploy Snake Animation
 
 on:
-  schedule: # execute every 12 hours
-    - cron: "* */12 * * *"
+  schedule: # Ejecutar cada 12 horas
+    - cron: "0 */12 * * *"
 
   workflow_dispatch:
 
   push:
     branches:
-    - master
+      - master
 
 jobs:
-  generate:
+  generate-and-deploy:
     permissions:
       contents: write
     runs-on: ubuntu-latest
-    timeout-minutes: 5
+    timeout-minutes: 10
 
     steps:
-      - name: generate snake.svg
+      # Checkout the repository
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      # Generate the snake animation
+      - name: Generate snake.svg
         uses: Platane/snk/svg-only@v3
         with:
           github_user_name: ${{ github.repository_owner }}
           outputs: dist/snake.svg?palette=github-dark
 
+      # Verify the generated SVG
+      - name: Verify snake.svg exists
+        run: |
+          if [ ! -f dist/snake.svg ]; then
+            echo "snake.svg not found!"
+            exit 1
+          fi
 
-      - name: push snake.svg to the output branch
+      # Cache the dist folder
+      - name: Cache dist folder
+        uses: actions/cache@v3
+        with:
+          path: dist
+          key: ${{ runner.os }}-snake-dist-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-snake-dist-
+
+      # Push the SVG to the output branch
+      - name: Push snake.svg to the output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: output
           build_dir: dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      # Send a notification if successful
+      - name: Notify success
+        if: success()
+        uses: actions/github-script@v6
+        with:
+          script: |
+            github.rest.issues.createComment({
+              issue_number: 1,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: "The snake animation has been successfully generated and deployed! 🐍"
+            })
+
+      # Notify failure
+      - name: Notify failure
+        if: failure()
+        uses: actions/github-script@v6
+        with:
+          script: |
+            github.rest.issues.createComment({
+              issue_number: 1,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: "There was an issue generating or deploying the snake animation. 🚨"
+            })
